# anonymize-me

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Resume for Matthew Booth.eml  main.py  pyproject.toml  test_anonymization.py  test_anonymized.eml  test_output_email.eml
src/: anonymizer.py  app.py  openai_client.py  prompting.py  schemas.py  synthetic_data.py
src/anonymize_me/: __init__.py  anonymizer.py  app.py  email_processing.py  prompting.py
src/anonymize_me.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/anonymize_me/processors/: __init__.py  docx_processor.py  email_processor.py  pdf_processor.py  text_processor.py  types.py
src/processors/: __init__.py  docx_processor.py  email_processor.py  pdf_processor.py  text_processor.py
src/templates/: prompt_template.txt
src/types/: eml.msg  file.word
tests/: Matt's Invoice.eml  Resume for Matthew Booth.eml  test_anonymization.py
